--- a/views/updateProduct.hbs
+++ b/views/updateProduct.hbs
@@ -19,7 +19,9 @@
                 <input class="text" type="text" name="txtName" placeholder="Name" value="{{products.name}}">
                 <input class="text" type="text" name="txtPrice" placeholder="Price" value="{{products.price}}">
                 <input class="text" type="text" name="txtColor" placeholder="Color" value="{{products.color}}">
-                <input class="submit" type="submit" value="Update product">
+                <time class="text" type="text" name="txtDateTime" placeholder="Date" value="{{prodcut.date}}"></time>
+                
+                <input class="submit" type="submit" value="Update product"></input>
             </form>
         </div>
     </div>
